added mongodb support with mongoose

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Shahriar Shovon",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "mongoose": "^4.11.8"
   }
 }
